tests/ui/traits/non_lifetime_binders/normalized-param-env-unconstrained-type-120033.stderr
error[E0405]: cannot find trait `AutoTrait` in this scope
  --> $DIR/normalized-param-env-unconstrained-type-120033.rs:14:20
   |
LL | pub struct Bar<T: ?AutoTrait> {}
   |                    ^^^^^^^^^ not found in this scope

error[E0107]: missing generics for associated type `Foo::Bar`
  --> $DIR/normalized-param-env-unconstrained-type-120033.rs:18:27
   |
LL |     T1: for<T> Foo<usize, Bar = Bar<T>>,
   |                           ^^^ expected 1 generic argument
   |
note: associated type defined here, with 1 generic parameter: `K`
  --> $DIR/normalized-param-env-unconstrained-type-120033.rs:11:10
   |
LL |     type Bar<K>;
   |          ^^^ -
help: add missing generic argument
   |
LL |     T1: for<T> Foo<usize, Bar<K> = Bar<T>>,
   |                              +++

error[E0107]: missing generics for associated type `Foo::Bar`
  --> $DIR/normalized-param-env-unconstrained-type-120033.rs:18:27
   |
LL |     T1: for<T> Foo<usize, Bar = Bar<T>>,
   |                           ^^^ expected 1 generic argument
   |
note: associated type defined here, with 1 generic parameter: `K`
  --> $DIR/normalized-param-env-unconstrained-type-120033.rs:11:10
   |
LL |     type Bar<K>;
   |          ^^^ -
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`
help: add missing generic argument
   |
LL |     T1: for<T> Foo<usize, Bar<K> = Bar<T>>,
   |                              +++

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0107, E0405.
For more information about an error, try `rustc --explain E0107`.
